# cmake_compount_example

./: CMakeLists.txt  LICENSE  a.c  b.c  c.c  go.sh  runtests.cmake
